--- a/index.html
+++ b/index.html
@@ -38,6 +38,45 @@
 </head>
 
 <body>
+
+  <div class="div-framer-1vwakiq" data-framer-name="Navigation / Light Theme - Scrolling" style="--border-bottom-width: 0px; --border-color: rgba(0, 0, 0, 0); --border-left-width: 0px; --border-right-width: 0px; --border-style: solid; --border-top-width: 0px; backdrop-filter: blur(5px); background-color: #f1f1f1cc; width: 100%; opacity: 1; box-shadow: rgba(0, 0, 0, 0) 0px 1px 4px 0px;">
+    <div class="div-framer-umtga0" data-framer-name="Layout" style="opacity: 1;">
+      <div class="div-framer-94i1re" data-framer-name="Top bar" style="opacity: 1;">
+        <a class="a-framer-1c9reg9-framer-1hl8d25" data-framer-name="Logo" style="background-color: rgba(255, 255, 255, 0); transform: translateY(-50%); opacity: 1;" href="/">
+          <div data-framer-component-type="SVG" data-framer-name="plain_logo" style="background-color: rgba(245, 245, 245, 0); image-rendering: pixelated; flex-shrink: 0; background-size: 100% 100%; background-image: url('/assets/imgs/logo.svg'); opacity: 1;" class="div-framer-1czn8v2"></div>
+        </a>
+      </div>
+      <div class="div-framer-1yhcgkg" data-framer-name="Menu Items" style="opacity: 1;">
+        <div class="div-framer-1vyknks" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: rgb(255, 255, 255); --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
+          <p style="--font-selector:Q1VTVE9NO0FCQyBXaHl0ZSBCb29r;--framer-font-family:&quot;ABC Whyte Book&quot;, sans-serif;--framer-letter-spacing:0px;--framer-line-height:1.6em;--framer-text-color:var(--extracted-r6o4lv, rgb(255, 255, 255))" class="p-framer-text-unique-1"><a class="a-framer-text-framer-styles-preset-1wicq5s-unique-1" data-styles-preset="ro7OPezbn" href="https://www.plain.com/docs" rel="noopener">Docs</a></p>
+        </div>
+        <div class="div-framer-drzwu3" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: rgb(255, 255, 255); --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
+          <p style="--font-selector:Q1VTVE9NO0FCQyBXaHl0ZSBCb29r;--framer-font-family:&quot;ABC Whyte Book&quot;, sans-serif;--framer-letter-spacing:0px;--framer-line-height:1.6em;--framer-text-color:var(--extracted-r6o4lv, rgb(255, 255, 255))" class="p-framer-text-unique-2"><a class="a-framer-text-framer-styles-preset-1wicq5s-unique-2" data-styles-preset="ro7OPezbn" href="https://www.plain.com../customers">Customers</a></p>
+        </div>
+        <div class="div-framer-1en4s7t" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: rgba(26, 31, 35, 1); --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
+          <p style="--font-selector:Q1VTVE9NO0FCQyBXaHl0ZSBCb29r;--framer-font-family:&quot;ABC Whyte Book&quot;, sans-serif;--framer-letter-spacing:0px;--framer-line-height:1.6em;--framer-text-color:var(--extracted-r6o4lv, rgb(26, 31, 35))" class="p-framer-text-unique-3"><a class="a-framer-text-framer-styles-preset-1wicq5s-unique-1" data-styles-preset="ro7OPezbn" href="https://www.plain.com../pricing">Pricing</a></p>
+        </div>
+        <div class="div-framer-1emdsqt" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: rgba(26, 31, 35, 1); --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
+          <p style="--font-selector:Q1VTVE9NO0FCQyBXaHl0ZSBCb29r;--framer-font-family:&quot;ABC Whyte Book&quot;, sans-serif;--framer-letter-spacing:0px;--framer-line-height:1.6em;--framer-text-color:var(--extracted-r6o4lv, rgb(26, 31, 35))" class="p-framer-text-unique-4"><a class="a-framer-text-framer-styles-preset-1wicq5s-unique-2" data-styles-preset="ro7OPezbn" href="https://plain-public.notion.site/Help-us-power-support-for-the-world-s-best-companies-7ea2f1a4cc084b96a95141a30e136b5b" target="_blank" rel="noopener">Jobs</a></p>
+        </div>
+        <div class="div-framer-yg307q" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: rgba(26, 31, 35, 1); --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
+          <p style="--font-selector:Q1VTVE9NO0FCQyBXaHl0ZSBCb29r;--framer-font-family:&quot;ABC Whyte Book&quot;, sans-serif;--framer-letter-spacing:0px;--framer-line-height:1.6em;--framer-text-color:var(--extracted-r6o4lv, rgb(26, 31, 35))" class="p-framer-text-unique-3"><a class="a-framer-text-framer-styles-preset-1wicq5s-unique-1" data-styles-preset="ro7OPezbn" href="https://journal.plain.com/" rel="noopener">Blog</a></p>
+        </div>
+        <div class="div-framer-16dr2ws" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: rgb(255, 255, 255); --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
+          <p style="--font-selector:Q1VTVE9NO0FCQyBXaHl0ZSBCb29r;--framer-font-family:&quot;ABC Whyte Book&quot;, sans-serif;--framer-letter-spacing:0px;--framer-line-height:1.6em;--framer-text-color:var(--extracted-r6o4lv, rgb(255, 255, 255))" class="p-framer-text-unique-1"><a class="a-framer-text-framer-styles-preset-1wicq5s-unique-2" data-styles-preset="ro7OPezbn" href="https://www.plain.com/changelog" rel="noopener">Changelog</a></p>
+        </div>
+      </div>
+      <div class="div-framer-h3yqrm-container" data-framer-name="CTA" name="CTA" style="opacity: 1;">
+        <div class="div-framer-ufbsb-framer-v-1rb88pi" style="display:contents" tabindex="0"><a name="CTA" class="a-framer-qpe58n-framer-etrjt" data-border="true" data-framer-name="alt" data-highlight="true" style="--border-bottom-width: 1px; --border-color: rgba(22, 26, 29, 1); --border-left-width: 1px; --border-right-width: 1px; --border-style: solid; --border-top-width: 1px; background-color: rgb(26, 31, 35); opacity: 1; border-radius: 4px;" href="https://app.plain.com" rel="noopener" tabindex="0">
+            <div class="div-framer-1nqn5ta" style="outline: none; display: flex; flex-direction: column; justify-content: flex-start; flex-shrink: 0; --extracted-r6o4lv: rgba(255, 255, 255, 1); --framer-paragraph-spacing: 0px; transform: none; opacity: 1;" data-framer-component-type="RichTextContainer">
+              <p style="--font-selector:Q1VTVE9NO0FCQyBXaHl0ZSBSZWd1bGFy;--framer-font-family:&quot;ABC Whyte Regular&quot;, serif;--framer-line-height:24px;--framer-text-alignment:left;--framer-text-color:var(--extracted-r6o4lv)" class="p-framer-text-unique-5">Sign in</p>
+            </div>
+          </a></div>
+      </div>
+    </div>
+  </div>
+
+<!--   
   <div>
     <div class="nav-container w-container"><a data-w-id="d40ac25f-f8cd-930a-1aff-ff5288309996" href="index.html" class="logo-link-block w-inline-block w--current" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"><img src="/assets/imgs/60554765e5d9ed7c70c1823e_CRSA_Logo2.svg" loading="lazy" alt="" class="logo"></a>
         <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -96,9 +135,10 @@
             </div>
         <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div><div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div></div>
     </div>
-</div>
-  <div class="section">
+</div> -->
+  <div class="section" style="padding-top:10vh">
     <div class="container dots w-container">
+
 
       <img src="/assets/imgs/hero_desktop.jpg" loading="lazy" alt="" style="width: 100%;">
         <div class="page-title">
